--- a/team_market_common/pom.xml
+++ b/team_market_common/pom.xml
@@ -66,6 +66,11 @@
             <artifactId>jackson-databind</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+
     </dependencies>
 
 
