--- a/team_market_administrator/pom.xml
+++ b/team_market_administrator/pom.xml
@@ -73,6 +73,11 @@
       <artifactId>jackson-databind</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+    </dependency>
+
   </dependencies>
 
   <build>
