--- a/team_market_merchant/src/main/resource/dbconf.properties
+++ b/team_market_merchant/src/main/resource/dbconf.properties
@@ -2,3 +2,4 @@ url=jdbc:oracle:thin:@10.222.29.161:1521:xe
 driverClassName=oracle.jdbc.driver.OracleDriver
 username=mcdmindb
 password=mcdmindb
+initialSize=20
