--- a/team_market_customer/src/main/resource/dbconf.properties
+++ b/team_market_customer/src/main/resource/dbconf.properties
@@ -1,5 +1,5 @@
 url=jdbc:oracle:thin:@10.222.29.161:1521:xe
 driverClassName=oracle.jdbc.driver.OracleDriver
-username=mcdmindb
-password=mcdmindb
+username=merchantdb
+password=merchantdb
 initialSize=20
