--- a/team_market_merchant/pom.xml
+++ b/team_market_merchant/pom.xml
@@ -78,6 +78,11 @@
             <artifactId>junit</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
