--- a/team_market_administrator/src/main/webapp/WEB-INF/web.xml
+++ b/team_market_administrator/src/main/webapp/WEB-INF/web.xml
@@ -6,11 +6,19 @@
   <display-name>Archetype Created Web Application</display-name>
 
   <listener>
-    <listener-class>team.market.administrator.listener.ContextListener</listener-class>
+    <listener-class>team.market.common.manager.listener.ContextListener</listener-class>
   </listener>
   <listener>
-    <listener-class>team.market.administrator.listener.RequestListener</listener-class>
+    <listener-class>team.market.common.manager.listener.RequestListener</listener-class>
   </listener>
+
+  <listener>
+    <listener-class>team.market.common.auth.listener.SecurityContextListener</listener-class>
+  </listener>
+  <listener>
+    <listener-class>team.market.common.auth.listener.SecurityRequestAndSessionListener</listener-class>
+  </listener>
+
 
   <servlet>
     <servlet-name>TestServlet</servlet-name>
