--- a/team_market_common/pom.xml
+++ b/team_market_common/pom.xml
@@ -18,6 +18,12 @@
         <relativePath>../parrent_pom.xml</relativePath>
     </parent>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+
     <!--Add dependencies here-->
     <dependencies>
 
