--- a/team_market_merchant/src/main/webapp/WEB-INF/web.xml
+++ b/team_market_merchant/src/main/webapp/WEB-INF/web.xml
@@ -20,7 +20,7 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>StoreFormServlet</servlet-name>
-    <url-pattern>/storform</url-pattern>
+    <url-pattern>/storeform</url-pattern>
   </servlet-mapping>
 
 
