--- a/team_market_administrator/src/main/webapp/WEB-INF/web.xml
+++ b/team_market_administrator/src/main/webapp/WEB-INF/web.xml
@@ -30,7 +30,7 @@
   </listener>
 
   <listener>
-    <listener-class>team.market.administrator.listener.JmsListener</listener-class>
+    <listener-class>team.market.administrator.listener.JmsContextListener</listener-class>
   </listener>
 
 
