--- a/team_market_administrator/src/main/webapp/WEB-INF/web.xml
+++ b/team_market_administrator/src/main/webapp/WEB-INF/web.xml
@@ -1,57 +1,75 @@
 <!DOCTYPE web-app PUBLIC
-        "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
-        "http://java.sun.com/dtd/web-app_2_3.dtd" >
+ "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
+ "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
+  <display-name>Archetype Created Web Application</display-name>
 
-    <display-name>Archetype Created Web Application</display-name>
+  <filter>
+    <filter-name>AdminFilter</filter-name>
+    <filter-class>team.market.administrator.filter.AdminFilter</filter-class>
+  </filter>
+<filter-mapping>
+  <filter-name>AdminFilter</filter-name>
+  <url-pattern>/admin/*</url-pattern>
+</filter-mapping>
 
-    <listener>
-        <listener-class>team.market.common.manager.listener.ContextListener</listener-class>
-    </listener>
 
-    <listener>
-        <listener-class>team.market.common.manager.listener.RequestListener</listener-class>
-    </listener>
+  <listener>
+    <listener-class>team.market.common.manager.listener.ContextListener</listener-class>
+  </listener>
+  <listener>
+    <listener-class>team.market.common.manager.listener.RequestListener</listener-class>
+  </listener>
 
-    <listener>
-        <listener-class>team.market.common.auth.listener.SecurityContextListener</listener-class>
-    </listener>
+  <listener>
+    <listener-class>team.market.common.auth.listener.SecurityContextListener</listener-class>
+  </listener>
+  <listener>
+    <listener-class>team.market.common.auth.listener.SecurityRequestAndSessionListener</listener-class>
+  </listener>
 
-    <listener>
-        <listener-class>team.market.common.auth.listener.SecurityRequestAndSessionListener</listener-class>
-    </listener>
+  <listener>
+    <listener-class>team.market.administrator.listener.JmsContextListener</listener-class>
+  </listener>
 
-    <listener>
-        <listener-class>team.market.administrator.listener.JmsContextListener</listener-class>
-    </listener>
-    
-    <filter>
-        <filter-name>AdminFilter</filter-name>
-        <filter-class>team.market.administrator.filter.AdminFilter</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>AdminFilter</filter-name>
-        <url-pattern>/admin/*</url-pattern>
-    </filter-mapping>
 
-    <servlet>
-        <servlet-name>LoginServlet</servlet-name>
-        <servlet-class>team.market.administrator.servlet.LoginServlet</servlet-class>
-    </servlet>
+  <servlet>
+    <servlet-name>TestServlet</servlet-name>
+    <servlet-class>team.market.administrator.servlet.TestServlet</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>LoginServlet</servlet-name>
+    <servlet-class>team.market.administrator.servlet.LoginServlet</servlet-class>
+  </servlet>
 
-    <servlet-mapping>
-        <servlet-name>LoginServlet</servlet-name>
-        <url-pattern>/adminLogin</url-pattern>
-    </servlet-mapping>
+  <servlet>
+    <servlet-name>MApiServlet</servlet-name>
+    <servlet-class>team.market.administrator.servlet.MApiServlet</servlet-class>
+  </servlet>
 
-    <servlet>
-        <servlet-name>StoreServlet</servlet-name>
-        <servlet-class>team.market.administrator.servlet.StoreServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>StoreServlet</servlet-name>
-        <url-pattern>/store</url-pattern>
-    </servlet-mapping>
 
+  <servlet>
+    <servlet-name>AdminServlet</servlet-name>
+    <servlet-class>team.market.administrator.servlet.AdminServlet</servlet-class>
+  </servlet>
+
+
+  <servlet-mapping>
+    <servlet-name>TestServlet</servlet-name>
+    <url-pattern>/test</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>LoginServlet</servlet-name>
+    <url-pattern>/adminLogin</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>MApiServlet</servlet-name>
+    <url-pattern>/m/api</url-pattern>
+  </servlet-mapping>
+
+  <servlet-mapping>
+    <servlet-name>AdminServlet</servlet-name>
+    <url-pattern>/admin</url-pattern>
+  </servlet-mapping>
 </web-app>
