--- a/team_market_customer/src/main/webapp/WEB-INF/web.xml
+++ b/team_market_customer/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,36 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+
+  <listener>
+    <listener-class>team.market.common.manager.listener.ContextListener</listener-class>
+  </listener>
+  <listener>
+    <listener-class>team.market.common.manager.listener.RequestListener</listener-class>
+  </listener>
+
+  <listener>
+    <listener-class>team.market.common.auth.listener.SecurityContextListener</listener-class>
+  </listener>
+  <listener>
+    <listener-class>team.market.common.auth.listener.SecurityRequestAndSessionListener</listener-class>
+  </listener>
+
+  <servlet>
+    <servlet-name>IndexServlet</servlet-name>
+    <servlet-class>team.market.customer.servlet.IndexServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>IndexServlet</servlet-name>
+    <url-pattern>/index</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
+    <servlet-name>ProductServlet</servlet-name>
+    <servlet-class>team.market.customer.servlet.ProductServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ProductServlet</servlet-name>
+    <url-pattern>/product</url-pattern>
+  </servlet-mapping>
 </web-app>
