add GetPicServlet api: /getPic?imageName=xx.xx

--- a/team_market_merchant/src/main/webapp/WEB-INF/web.xml
+++ b/team_market_merchant/src/main/webapp/WEB-INF/web.xml
@@ -46,11 +46,18 @@
     <servlet-name>StoreFormServlet</servlet-name>
     <servlet-class>team.market.merchant.servlet.StoreFormServlet</servlet-class>
   </servlet>
+  <servlet>
+        <servlet-name>GetPicServlet</servlet-name>
+        <servlet-class>team.market.merchant.servlet.GetPicServlet</servlet-class>
+  </servlet>
   <servlet-mapping>
     <servlet-name>StoreFormServlet</servlet-name>
     <url-pattern>/storeform</url-pattern>
   </servlet-mapping>
-
+<servlet-mapping>
+  <servlet-name>GetPicServlet</servlet-name>
+  <url-pattern>getPic</url-pattern>
+</servlet-mapping>
 
 
 
