--- a/team_market_merchant/src/main/webapp/WEB-INF/web.xml
+++ b/team_market_merchant/src/main/webapp/WEB-INF/web.xml
@@ -4,15 +4,6 @@
 
   <display-name>Archetype Created Web Application</display-name>
 
-  <filter>
-    <filter-name>ApplyFilter</filter-name>
-    <filter-class>team.market.merchant.Filter.ApplyFilter</filter-class>
-  </filter>
-  <filter-mapping>
-    <filter-name>ApplyFilter</filter-name>
-    <url-pattern>/applicant.jsp</url-pattern>
-  </filter-mapping>
-
 
   <listener>
     <listener-class>team.market.merchant.listener.FileContextListener</listener-class>
@@ -31,7 +22,18 @@
   <listener>
     <listener-class>team.market.common.auth.listener.SecurityRequestAndSessionListener</listener-class>
   </listener>
-  
+
+
+  <servlet>
+    <servlet-name>IndexServlet</servlet-name>
+    <servlet-class>team.market.merchant.servlet.IndexServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>IndexServlet</servlet-name>
+    <url-pattern>/</url-pattern>
+  </servlet-mapping>
+
   <servlet>
     <servlet-name>UserServlet</servlet-name>
     <servlet-class>team.market.merchant.servlet.UserServlet</servlet-class>
@@ -46,19 +48,40 @@
     <servlet-name>StoreFormServlet</servlet-name>
     <servlet-class>team.market.merchant.servlet.StoreFormServlet</servlet-class>
   </servlet>
-  <servlet>
-        <servlet-name>GetPicServlet</servlet-name>
-        <servlet-class>team.market.merchant.servlet.GetPicServlet</servlet-class>
-  </servlet>
   <servlet-mapping>
     <servlet-name>StoreFormServlet</servlet-name>
     <url-pattern>/storeform</url-pattern>
   </servlet-mapping>
-<servlet-mapping>
-  <servlet-name>GetPicServlet</servlet-name>
-  <url-pattern>getPic</url-pattern>
-</servlet-mapping>
 
+  <servlet>
+    <servlet-name>DashboardServlet</servlet-name>
+    <servlet-class>team.market.merchant.servlet.DashboardServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>DashboardServlet</servlet-name>
+    <url-pattern>/dashboard</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
+    <servlet-name>ProductServlet</servlet-name>
+    <servlet-class>team.market.merchant.servlet.ProductServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>ProductServlet</servlet-name>
+    <url-pattern>/product</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
+    <servlet-name>AdFormServlet</servlet-name>
+    <servlet-class>team.market.merchant.servlet.AdFormServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>AdFormServlet</servlet-name>
+    <url-pattern>/ad</url-pattern>
+  </servlet-mapping>
 
 
 </web-app>
